--- a/style.css
+++ b/style.css
@@ -60,3 +60,36 @@ h2{
     font-weight: bolder;
     color: blueviolet;
 }
+
+/* responsive style started here */
+
+@media  screen and (max-width: 576px) {
+    input{
+        width: 200px;
+        font-size: 15px;
+        padding: 10px;
+    }
+
+    button{
+        padding: 10px 20px;
+        font-size: 15px;
+        border-radius: 5px;
+    }
+}
+
+@media  screen and (min-width: 576px) and (mix-width: 992px) {
+    input{
+        width: 400px;
+        font-size: 15px;
+        padding: 10px;
+        border-radius: 5px;
+        
+    }
+
+    button{
+        padding: 10px 20px;
+        font-size: 15px;
+        border-radius: 5px;
+    }
+    
+}
